# zettapay

./: .dockerignore  .env.example  .gitignore  .vercelignore  .zombie-sentinel-z29-4-d34dfaff.md  Anchor.toml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.anchor.json  tsconfig.json  vercel.json
api/: faucet.ts  health.ts  healthz.ts  index.ts  invoices.ts  mcp.ts  metrics.ts  pay.ts  payments.ts  ready.ts  status.ts  tsconfig.json
audit/: BUG_BOUNTY.md  CODE_REVIEW_CHECKLIST.md  CRITICAL_PATHS.md  KNOWN_ISSUES.md  OWASP_TOP_10.md  README.md  SCOPE.md  SECURITY_ASSUMPTIONS.md  STATIC_ANALYSIS.md  SUBMISSION.md  THREAT_MODEL.md
docs/: HR-GATES.md  README.md  community.mdx  docs.json  introduction.mdx  quickstart.md  quickstart.mdx
examples/: .gitignore  README.md
fabric/: README.md  server-patch.md
idl/: zettapay.json
programs/zettapay/: Cargo.toml  README.md
programs/zettapay-core/: Cargo.toml
programs/zettapay-core/src/: error.rs  ethspv.rs  instructions.rs  lib.rs  pda.rs  spv.rs  state.rs  validation.rs
programs/zettapay-core/tests/: integration.rs
programs/zettapay/src/: lib.rs
protocol/: 00-overview.md  01-uri-scheme.md  02-derivation-paths.md  03-instructions.md  04-account-layouts.md  05-error-codes.md  06-proof-formats.md  README.md
public/: 404.html  about.html  checkout.html  contact.html  dashboard.html  embed.js  index.html  launch.html  manifest.json  pay.html  pricing.html  privacy.html  signup.html  status.html  sw.js  terms.html  theme-toggle.js  theme.css
(+446 files in other folders)
